# static-cdn

./: .gitignore  Cargo.toml  README.md
src/: cdn.rs  checksum.rs  config.rs  db.rs  default-config.toml  main.rs  rel_path.rs  tests.rs
src/cdn/: cloudflare.rs
src/db/: 1_up.sql  2_up.sql  tests.rs
src/db/snapshots/: static_cdn__db__tests__after_update.snap  static_cdn__db__tests__empty_table.snap  static_cdn__db__tests__first_instert.snap
