[package]
authors = ["Clément Joly <foss@131719.xyz>"]
license = "MPL-2.0"
name = "static-cdn"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = { version = "0.11.6", default-features = false, features = ["auto-color"] }
indicatif = { version = "0.17.9", features = ["rayon"] }
log = "0.4.22"
rayon = "1.10.0"
rusqlite = "0.32.1"
rusqlite_migration = "1.3.1"
twox-hash = "2.1.0"
walkdir = "2"

[dev-dependencies]
insta = "1.41.1"
tabled = { version = "0.17.0", default-features = false, features = ["std"] }
